Avoids wrapping of cells in the gradebook

--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -57,6 +57,11 @@ $text: $asphalt;
   > tbody > tr > td:not(:first-child) {
     cursor: pointer;
   }
+
+  td,
+  th {
+    white-space: nowrap;
+  }
 }
 
 .section {
